# agentplayground

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  init_db.py  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  dependencies.py  logging.py  main.py  telemetry.py
apps/api/app/agents/: __init__.py  base.py  portfolio_agent.py  risk_analysis.py  signal_research.py
apps/api/app/agents/workflows/: research_graph.py
apps/api/app/api/: agents.py  assets.py  audits.py  auth.py  backtests.py  data_sources.py  events.py  health.py  portfolio.py  seed.py  signals.py
apps/api/app/core/: constants.py  enums.py  exceptions.py
apps/api/app/db/: base.py  memory_store.py  session.py
apps/api/app/db/models/: __init__.py  asset.py  audit_log.py  embedding_document.py  event_signal.py  factor_signal.py  filing.py  news_item.py  order_proposal.py  portfolio_snapshot.py  price_bar.py  trade_candidate.py  user.py  watchlist.py
apps/api/app/routers/: agents.py
apps/api/app/services/: audit_service.py  paper_broker.py  risk_engine.py  signal_engine.py
apps/api/tests/: test_health.py  test_paper_broker.py  test_risk_engine.py  test_signal_engine.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
docs/: architecture.md  local-development.md
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/postgres/: init.sql
scripts/: seed_data.py
