[project]
name = "agentplayground-api"
version = "0.1.0"
description = "AgentPlayground API - Agentic hedge-fund research copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "pgvector==0.3.5",
    "redis==5.1.1",
    "duckdb==1.1.1",
    "polars==1.9.0",
    "langgraph==0.2.20",
    "langchain==0.3.4",
    "langchain-core==0.3.10",
    "litellm==1.50.0",
    "prefect==3.0.8",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "aiofiles==24.1.0",
    "structlog==24.4.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "tenacity==9.0.0",
    "pyarrow==17.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "pyright==1.1.373",
    "pre-commit==3.8.0",
    "ipython==8.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E", "W", "F",  # pycodestyle, pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "C4",           # flake8-comprehensions
    "UP",           # pyupgrade
    "N",            # pep8-naming
    "D",            # pydocstyle
    "S",            # bandit
    "T",            # flake8-print
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstrings
    "D203", "D213",  # Docstring style
    "S101",  # assert used
    "S603", "S607",  # subprocess
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.alembic]
script_location = "migrations"
